fix image overflow

--- a/src/static/scss/common.scss
+++ b/src/static/scss/common.scss
@@ -134,6 +134,7 @@
 .banner-title {
   padding: 13rem 9rem;
   background-size: cover;
+  overflow: hidden;
   .banner-background{
     opacity: 0;
     top: 0;
